--- a/.env.example
+++ b/.env.example
@@ -8,12 +8,16 @@ LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=mysql
+DB_CONNECTION=landlord
+DB_TENANT_CONNECTION=tenant
 DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_DATABASE=laravel_10_multitenancy
+DB_PORT=3307
+DB_DATABASE=landlord_tinkerwell
+DB_TENANT_DATABASE=tenant_tinkerwell
 DB_USERNAME=root
 DB_PASSWORD=
+
+SESSION_CONNECTION=tenant
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
